# Operit

./: .gitmodules  README(E).md  README.md  package.json  packages_whitelist.txt  sync_example_packages.py
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ai/assistance/operit/api/chat/: AIForegroundService.kt  (+1 more)
app/src/main/java/com/ai/assistance/operit/services/: ChatServiceCore.kt  FloatingChatService.kt  UIDebuggerService.kt
app/src/main/java/com/ai/assistance/operit/util/: ChatMarkupRegex.kt  GithubReleaseUtil.kt  TokenCacheManager.kt  WaifuMessageProcessor.kt
app/src/main/java/com/k2fsa/sherpa/mnn/: FeatureConfig.kt  OnlineRecognizer.kt  OnlineStream.kt  Vad.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
docs/: BUILDING.md  SCRIPT_DEV_GUIDE.md
dragonbones/: CMakeLists.txt  build.gradle.kts
examples/: Nano banana_draw.js  automatic_ui_base.js  automatic_ui_base.ts  automatic_ui_subagent.js  automatic_ui_subagent.ts  github.js  workflow.js  workflow.ts  xai_draw.ts
examples/github/src/: index.ts
examples/types/: index.d.ts  workflow.d.ts
mnn/: CMakeLists.txt  build.gradle.kts
showerclient/src/main/java/com/ai/assistance/shower/: IShowerService.java
showerclient/src/main/java/com/ai/assistance/showerclient/: ShowerController.kt
tools/:  build_server.sh
tools/github/: issues_all.md  issues_open_ai.md  list_issues.py
tools/hotbuild/: .gitignore  apply_patch.py  build_patch.py  install_from_adb.bat  nightly_auto.py
(+169 files in other folders)
